# Data-Analyst-Agent

./: .env.example  .gitignore  README.md  code.html  execute_response.json  explore_response.json  hypotheses_response.json  phase4_response.json  phase4_run_response.json  prompt4.txt  pyproject.toml  run_smoke_pipeline.ps1  session.json  test_frontend.py  test_pipeline.py  test_upload.ps1
app/: chat_router.py  execute.py  explore.py  hypothesis.py  langfuse_client.py  layers.py  main.py  models.py  monitoring.py  phase4.py  progress.py
data/: business_kpis_csv_execute_response.json  business_kpis_csv_explore_response.json  business_kpis_csv_hypotheses_response.json  business_kpis_csv_phase4_run_response.json  category_performance_csv_execute_response.json  category_performance_csv_explore_response.json  category_performance_csv_hypotheses_response.json  category_performance_csv_phase4_run_response.json  correlation_matrix_csv_execute_response.json  correlation_matrix_csv_explore_response.json  correlation_matrix_csv_hypotheses_response.json  correlation_matrix_csv_phase4_run_response.json  data_dictionary_csv_execute_response.json  data_dictionary_csv_explore_response.json  data_dictionary_csv_hypotheses_response.json  data_dictionary_csv_phase4_run_response.json  discount_analysis_csv_execute_response.json  discount_analysis_csv_explore_response.json  discount_analysis_csv_hypotheses_response.json  discount_analysis_csv_phase4_run_response.json  evaluation_results.json  monthly_sales_trend_csv_execute_response.json  monthly_sales_trend_csv_explore_response.json  (+31 more)
(+62 files in other folders)
