[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "Agentic Data Analyst System - Phases 0 & 1"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pandas>=2.0.0",
    "polars>=0.20.0",
    "duckdb>=0.9.0",
    "pyarrow>=14.0.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]